name all DO members lowercase so that postgres mapping works fix difference calculation